--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "i18nproject",
+  "homepage": "https://suyash101998.github.io/i18n-react-demo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "preDeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -25,6 +28,7 @@
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
+    "gh-pages": "^6.3.0",
     "globals": "^16.4.0",
     "vite": "^7.1.7"
   }
