--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "i18nproject",
-  "homepage": "https://suyash101998.github.io/i18n-react-demo",
+  "homepage": "https://suyash101998.github.io/i18n-react-demo/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
